# jhelper

./: CMakeLists.txt  main.cpp  run.tempate  submission.template  task.template
generator/: generator.cpp
output/: main.cpp
testrunner/: main.cpp
